# dftpoly

./: CMakeLists.txt  README.md
src/: BarWidget.cpp  BarWidget.h  HHOModel.cpp  HHOModel.h  PolyDFTWidget.cpp  PolyDFTWidget.h  PolyExplorer.cpp  PolyExplorer.h  PolygonEditorWidget_diskpp.cpp  SpectrumWidget.cpp  SpectrumWidget.h  StabfreeHHOParameters.cpp  StabfreeHHOParameters.h  dft.cpp  dft.h  hist.cpp  hist.h  main.cpp  points.cpp  points.h
